[metadata]
name = darepy_sans
version = attr: darepy.__version__
author = Viviane Lutz-Bueno - Paul Scherrer Institut
author_email = viviane.lutz-Bueno@psi.ch
description = DarePy-SANS data reduction pipline
long_description = Homemade solutions to run the radial integration and reduction of SINQ instruments SANS-I and SANS-LLB at PSI.
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Development Status :: 3 - Alpha

[options]
python_requires = >=3.8
packages =
    darepy
    darepy.actions
    darepy.config
    darepy.plotting
install_requires = file: requirements.txt

[options.package_data]
darepy/data =
  *.txt

[project.urls]
Homepage = "https://github.com/vivianel/DarePy-SANS"

[options.entry_points]
console_scripts =
    darepy = darepy.__main__:main
